After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723166 - qtdemux: incorrect tag character
qtdemux: incorrect tag character
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-28 13:51 UTC by Bastien Nocera
Modified: 2014-02-13 15:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
140127Mata-16x9-truncated.mp4 (1.00 MB, application/octet-stream)
2014-01-28 13:51 UTC, Bastien Nocera
Details

Description Bastien Nocera 2014-01-28 13:51:58 UTC
Created attachment 267405 [details]
140127Mata-16x9-truncated.mp4

the 'Ð' that appears in totem for example is supposed to be a '–'.

mplayer shows the name correctly, GStreamer doesn't.

Downloaded from http://www.theguardian.com/football/video/2014/jan/27/juan-mata-unveiled-manchester-united-player-video
Comment 1 Thiago Sousa Santos 2014-02-13 04:09:22 UTC
The char in question has a value of D0, that is a Ð in UTF8, but it is stored into one of the (C) atoms that needs some special parsing that is yet unhandled in qtdemux. Will look into it.
Comment 2 Bastien Nocera 2014-02-13 12:16:16 UTC
(In reply to comment #1)
> The char in question has a value of D0, that is a Ð in UTF8, but it is stored
> into one of the (C) atoms that needs some special parsing that is yet unhandled
> in qtdemux. Will look into it.

I learnt something. Do you have some details on what that parsing is supposed to be?
Comment 3 Thiago Sousa Santos 2014-02-13 12:25:24 UTC
'User Data Text Strings and Language Codes' section from the qtff pdf: https://developer.apple.com/library/mac/documentation/QuickTime/qtff/qtff.pdf

The section above that has a few examples of the (C) metadata atoms.
Comment 4 Thiago Sousa Santos 2014-02-13 15:57:11 UTC
commit 7f1d51ba90275a53e00339a75746bc638edded0c
Author: Thiago Santos <ts.santos@sisa.samsung.com>
Date:   Thu Feb 13 12:29:13 2014 -0300

    qtdemux: handle tags in mac encoding
    
    Check the charset from (C)*** tags and set the charset
    to convert from MAC encoding if suitable.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=723166